# ika

./: .gitattributes  .gitignore  .tmp_action.sh  .tmp_action2.sh  .tmp_check.sh  .tmp_goal.sh  .tmp_launch.sh  .tmp_wait.sh  CLAUDE.md  DENEMELER.md  IKA_ROS2_System_Reference.md  ILERLEME.md  KEEPOUT.md  KURULUM.md  LICENSE  README.md  TEST_PROTOKOLU.md  TEZ.md
benchmarks/: README.md  render_tables.py  run_benchmark.py  scenarios.yaml
benchmarks/debug_scenario/: analyze.py  capture_plan.py  repeat_trial.sh  repeat_trial_avoider.sh  run_trial.py  run_trial_avoider.py
benchmarks/debug_scenario/ablation/: ablation_results.md  faz3_results.md  final_status.md  patch_nav2_params.py  run_ablation.sh
benchmarks/debug_scenario/results/: ablation_A2.1_n5_140253.csv  ablation_A2.2_n5_141126.csv  ablation_A2.3_n5_141706.csv  ablation_A2.4_n5_135338.csv  baseline_n10.csv  baseline_v2_n10.csv  baseline_v3_n5.csv  baseline_v4_n5.csv  baseline_v5_n5.csv  goal_offset_y050_n5.csv  mppi_v3_n5.csv
docs/: avoidance_architecture.md  failure_taxonomy.md  parkur_haritasi.md
ika_ws/src/ika_base_controller/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_base_controller/arduino/: README.md
ika_ws/src/ika_base_controller/arduino/ika_motor_controller/: ika_motor_controller.ino
ika_ws/src/ika_base_controller/ika_base_controller/: base_controller_node.py
ika_ws/src/ika_base_controller/test/: test_kinematics.py
ika_ws/src/ika_bringup/: CMakeLists.txt  package.xml
ika_ws/src/ika_bringup/config/: robot_params.yaml
ika_ws/src/ika_bringup/launch/: real_robot.launch.py  sensors.launch.py  sim_full.launch.py
ika_ws/src/ika_bringup/rviz/: ika_full.rviz
ika_ws/src/ika_description/: CMakeLists.txt  package.xml
ika_ws/src/ika_description/launch/: display.launch.py
ika_ws/src/ika_description/meshes/: .gitkeep
ika_ws/src/ika_description/rviz/: ika_view.rviz
ika_ws/src/ika_description/urdf/: ika.urdf.xacro  ika_base.xacro  ika_gazebo.xacro  ika_properties.xacro  ika_sensors.xacro
ika_ws/src/ika_fusion/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_fusion/config/: fusion_params.yaml
ika_ws/src/ika_fusion/ika_fusion/: fusion_node.py  hazard_fusion.py
ika_ws/src/ika_fusion/test/: test_hazard_fusion.py
ika_ws/src/ika_local_planner/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_local_planner/ika_local_planner/: __init__.py  local_costmap.py  local_planner_logic.py  path_rejoin.py  planner_state.py  semantic_policy.py
ika_ws/src/ika_local_planner/ika_local_planner/nodes/: __init__.py  dynamic_local_planner_node.py
ika_ws/src/ika_local_planner/test/: test_integration_logic.py  test_local_costmap.py  test_local_planner_logic.py  test_path_rejoin.py  test_planner_state.py  test_semantic_policy.py
ika_ws/src/ika_mission/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_mission/ika_mission/: avoider_logic.py  gps_waypoint_mission.py  obstacle_avoider_node.py
ika_ws/src/ika_mission/launch/: autonomous_drive.launch.py
ika_ws/src/ika_mission/missions/: test_mission.yaml
ika_ws/src/ika_mission/test/: test_avoider_logic.py
ika_ws/src/ika_navigation/: CMakeLists.txt  package.xml
ika_ws/src/ika_navigation/config/: ekf_params.yaml  mppi_controller.yaml  nav2_params.yaml  rf2o_params.yaml  slam_params.yaml
ika_ws/src/ika_navigation/launch/: navigation.launch.py  slam.launch.py
ika_ws/src/ika_navigation/maps/: .gitkeep
ika_ws/src/ika_perception_dl/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_perception_dl/config/: dl_params.yaml  sim_detection_params.yaml
ika_ws/src/ika_perception_dl/ika_perception_dl/: detector_postprocess.py  dl_perception_node.py  ground_projection.py  sim_detection.py  sim_detection_node.py
ika_ws/src/ika_perception_dl/launch/: sim_detection.launch.py
ika_ws/src/ika_perception_dl/test/: test_detector_postprocess.py  test_ground_projection.py  test_sim_detection.py
ika_ws/src/ika_rl_planner/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_rl_planner/config/: metrics_params.yaml
ika_ws/src/ika_rl_planner/ika_rl_planner/: metrics_recorder_node.py  planner_metrics.py
ika_ws/src/ika_rl_planner/test/: test_planner_metrics.py
ika_ws/src/ika_safety/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_safety/config/: safety_params.yaml
ika_ws/src/ika_safety/ika_safety/: safety_logic.py  safety_supervisor_node.py
ika_ws/src/ika_safety/test/: test_safety_logic.py
ika_ws/src/ika_simulation/: CMakeLists.txt  package.xml
ika_ws/src/ika_simulation/config/: ros_gz_bridge.yaml
ika_ws/src/ika_simulation/launch/: simulation.launch.py
ika_ws/src/ika_simulation/models/: .gitkeep
ika_ws/src/ika_simulation/worlds/: debug_world.sdf  test_world.sdf
ika_ws/src/ika_terrain/: package.xml  setup.cfg  setup.py
ika_ws/src/ika_terrain/config/: terrain_params.yaml
ika_ws/src/ika_terrain/ika_terrain/: ground_plane.py  terrain_perception_node.py
ika_ws/src/ika_terrain/test/: test_ground_plane.py
scripts/: check_workspace.sh  deploy_sim.sh  install_pi.sh  stop_sim.sh  teleop_raw.sh  teleop_safe.sh  verify_sim.sh
