<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ika_bringup</name>
  <version>0.1.0</version>
  <description>IKA - Ust duzey launch dosyalari, RViz config, gercek arac baslatma</description>
  <maintainer email="aslan@todo.todo">aslan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ika_description</exec_depend>
  <exec_depend>ika_base_controller</exec_depend>
  <exec_depend>ika_terrain</exec_depend>
  <exec_depend>ika_safety</exec_depend>
  <exec_depend>ika_navigation</exec_depend>
  <exec_depend>ika_mission</exec_depend>
  <exec_depend>ika_simulation</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
