<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ika_fusion</name>
  <version>0.1.0</version>
  <description>IKA - Hibrit hazard fuzyon: DL nesne tespiti + RANSAC terrain -&gt; /hazard_state + /detection_obstacles</description>
  <maintainer email="aslan@todo.todo">aslan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
