<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ika_local_planner</name>
  <version>0.1.0</version>
  <description>
    IKA — Dynamic local planner core (pure-Python, ROS-agnostic).
    Provides local costmap construction, semantic obstacle policy,
    candidate-corridor planning, and path rejoin logic.
    TASK-4A: no ROS node yet — algorithmic core + unit tests only.
  </description>
  <maintainer email="aslan@todo.todo">aslan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>vision_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
